# traditional-chinese-event-memory-benchmark

./: .gitignore  LICENSE_NOTICE.md  PACKAGE_MANIFEST.md  PROJECT_COMPLETION_CHECK.md  README.md  README.zh-TW.md  REPRODUCIBILITY.md  api_config.example.env  pyproject.toml  requirements-optional.txt
data/public_grounded_benchmark/: README.md  dataset_audit.jsonl  personas.jsonl  qa.jsonl  source_audit.jsonl  source_facts.jsonl  source_manifest.jsonl
data/public_grounded_hard_challenge/: README.md  dialogues.jsonl  gold_events.jsonl  gold_update_relations.jsonl  memory_turns.jsonl  naturalness_audit.jsonl  qa.jsonl  scenario_cards.jsonl  source_contexts.jsonl
data/sample/: dialogues.jsonl  qa.jsonl
data/source_catalog/: chinese_corpus_candidates.jsonl
data/v0/: README.md  dialogues.jsonl  qa.jsonl
event_memory/: __init__.py
reports/: experiment_summary_zh.md  failure_analysis.md  failure_analysis_zh.md
tests/: test_api_clients.py  test_cli.py  test_corpus_catalog.py  test_dataset_builder.py  test_dataset_naturalizer.py  test_eval.py  test_event_structure.py  test_experiment.py  test_grounded_dataset_builder.py  test_judge_audit.py  test_llm_extraction.py  test_llm_memory_builder.py  test_llm_update.py  test_long_context_dataset_builder.py  test_manual_audit_builder.py  test_manual_audit_labeler.py  test_manual_audit_summary.py  test_memory_text_refresher.py  test_pipeline.py  test_public_grounded_dataset_builder.py  test_relation_filter.py  test_report_consistency.py  test_retrieval.py  test_state_answerer.py  test_structured_events.py
(+107 files in other folders)
